force-app/main/default/objects/HFS_Storage_Location__c/HFS_Storage_Location__c.object-meta.xml
<CustomObject>
    <description>This object will save all information related to the Storage Locations.</description>
    <label>HFS Storage Location</label>
    <nameField>
        <label>Storage Location Unique Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HFS Storage Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>