force-app/main/default/objects/HFS_Storage_Location__c/fields/HFS_Storage_Point__c.field-meta.xml
<CustomField>
    <fullName>HFS_Storage_Point__c</fullName>
    <label>HFS Storage Point</label>
    <referenceTo>HFS_Storage_Point__c</referenceTo>
    <relationshipLabel>HFS Storage Locations</relationshipLabel>
    <relationshipName>HFS_Storage_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>