force-app/main/default/objects/HFS_Storage_Location__c/fields/QR_Code_hidden__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_hidden__c</fullName>
    <label>QR Code hidden</label>
    <length>20</length>
    <type>Text</type>
</CustomField>