force-app/main/default/objects/HFS_Storage_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QR_Code_hidden__c</columns>
    <columns>HFS_Storage_Point__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>